<resources>
    <string name="app_name" translatable="false">KIP Defaulter Tracing</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="sync" translatable="false">Sync</string>
    <string name="action_log_out">Logging Out</string>
    <string name="powered_by" translatable="false">Powered by</string>
    <string name="app_name_full">KIP Defaulter Tracing</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="done">Done</string>

    <!-- Navigation Strings -->
    <string name="navigation_drawer_close">Close</string>
    <string name="side_nav_add">Add new child</string>
    <string name="scan_card">Card Scanner</string>
    <string name="side_nav_out_of_catchment">Record out of catchment vaccination</string>
    <string name="side_nav_moh510_report">MOH 510 Report</string>

    <string name="out_of_catchment">Record out of catchment vaccination</string>
    <string name="nav_register">Register</string>
    <string name="attribution_text">Powered by OpenSRP</string>
    <string name="show_password_text">Show password</string>
    <string name="app_version">App version: %1$s (built on %2$s)</string>
    <string name="login_text">Log In</string>
    <string name="log_out_text">Log Out</string>

    <string name="send_kepi_sms_reminder">Send SMS Reminder</string>
    <string name="send_advocacy_sms">Send Advocacy SMS</string>

    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">Français</string>
    <string name="arabic" translatable="false">عربى</string>
    <string name="zeir_id" translatable="false">KIP ID</string>
    <string name="iz_id_hint">KIP ID number</string>

    <string name="nav_logo" translatable="false">KIP Defaulter Tracing</string>
    <string name="title_activity_child_immunization" translatable="false">ChildImmunizationActivity</string>

    <!-- Nfc-->
    <string name="error_code">Error: %1$s</string>
    <string name="something_went_wrong">Something went wrong&#8230;</string>
    <string name="please_install_nfc_sdk">Please install the Nfc SDK first</string>
    <string name="install">Install</string>
    <string name="activate">Activate</string>
    <string name="please_activate_nfc_sdk">Nfc SDK NOT activated. Please activate&#8230;</string>
    <string name="nfc_sdk_missing">The Nfc SDK is missing </string>
    <string name="nfc_error">Please contact the helpdesk with error code %1$s %2$s %3$s</string>
    <string name="alert">Alert</string>
    <string name="card_not_registered">This card is not registered&#8230;</string>
    <string name="successfully_updated_card">Successfully updated card &#8230;</string>
    <string name="card_already_registered">This card is already registered&#8230;</string>
    <string name="card_no">Card No. %1$s </string>
    <string name="no_information_on_card">No information on the card. The card does not have a store for this application</string>
    <string name="the_card_is_full">The card is full and unusable. Please register another card</string>
    <string name="there_is_an_error_with_record"> There is an error with this record. Please contact the helpdesk with error code  %1$s %2$s %3$s and the client’s ID</string>
    <string name="the_operation_was_cancelled">The operation was cancelled. Please try again</string>
    <string name="the_sdk_is_not_activated">The SDK is not activated. Please activate the SDK by going to settings and touching Activate Nfc SDK and try again after successful activation</string>
    <string name="the_operation_failed">The operation failed. Please try again. Please contact the helpdesk with error code %1$s %2$s %3$s</string>
    <string name="this_card_is_invalid">This card is invalid. Please use another card</string>
    <string name="new_child_record">New child record </string>
    <string name="no_child_record_found">No record found on this device for this card, would you like to create one ?</string>
    <string name="operation_not_allowed">Operation not allowed</string>
    <string name="store_already_exists">Store already exists</string>
    <string name="store_does_not_exist">Store does not exist</string>
    <string name="store_full">Store full</string>
    <string name="operation_Cancelled">Operation Cancelled</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="sdk_is_not_configured">SDK is not configured</string>
    <string name="operation_failed">Operation Failed</string>
    <string name="authentication_method_not_supported">Authentication method not supported</string>
    <string name="read_card_write_timed_out">Read Card/Write Timed out</string>
    <string name="unable_to_read_card">Unable to read card</string>
    <string name="not_a_valid_card">Not a valid card</string>
    <string name="key_expired">Key Expired</string>
    <string name="Key_validation_error">Key validation error</string>
    <string name="incorrect_key">Incorrect Key</string>
    <string name="key_revoked">Key revoked</string>
    <string name="application_ey_mismatch">Application-Key mismatch</string>
    <string name="not_found">Not Found</string>
    <string name="record_data_exceeds_limit">Record data exceeds limit</string>
    <string name="partially_successful">Partially Successful</string>
    <string name="user_authentication_failed">User Authentication Failed</string>
    <string name="new_card_registration">New card registration </string>
    <string name="no_child_registration_found">No card associated with this child on this device, would you to register card ?</string>
    <string name="reset_card">Reset card</string>
    <string name="are_you_sure_reset_card">Are you sure you want to Reset this card? \n\nThis action CANNOT be reversed&#8230;</string>
    <string name="arabic_not_supported">Vaccination in Arabic is not supported in this version</string>
    <string name="logo_string">logo</string>

    <string name="birth_registration_number">Birth registration number</string>
    <string name="middle_name">Middle Number</string>
    <string name="home_address">Home Address</string>
    <string name="village">Village</string>
    <string name="traditional_authority">Traditional Authority</string>
    <string name="mother_guardian_nid">Mother Guardian NID</string>
    <string name="protected_at_birth">Protected at Birth</string>
    <string name="mother_hiv_status">Mother Hiv Status</string>
    <string name="child_hiv_status">Child Hiv Status</string>
    <string name="child_treatment">Child Treatment</string>

    <string name="nav_registers">Registers</string>
    <string name="nav_logout_as">Logout as</string>
    <string name="nav_sync">Sync</string>
    <string name="nav_last">"Last: </string>
    <string name="nav_last_sync_time">HH:mm a , MMM DD</string>
    <string name="log_out_as">Log out as</string>
    <string name="device_to_device_sync">Device-to-device Sync</string>
    <string name="action_start_sync">Sync Started</string>
    <string name="all_registers">All Registers</string>
    <string name="menu_child_clients">KEPI Clients</string>


    <string name="menu_anc_clients">ANC Clients</string>
    <string name="due_only">Due Only</string>
    <string name="anc_register">ANC Register</string>

    <string name="all_clients">Defaulter Clients</string>
    <string name="language_x_selected">%s selected</string>
    <string name="treated_at_time">TRACED\n%s</string>
    <string name="checked_in">Tracing</string>
    <string name="visits">PREVIOUS TRACING</string>


    <!-- END OF INDICATOR LABELS -->
    <string name="str_page_info">Page {0} of {1}</string>
    <string name="vaccine_schedule_update_wait_message">This might take some time... Kindly wait</string>
    <string name="dismiss_lookup">Confirm</string>
    <string name="close">Close</string>
    <string name="tap_to_view">Tap to view</string>


    <!--    sync reveal-->

    <string name="synced_events">Synced events:</string>
    <string name="unsynced_events">Unsynced events:</string>
    <string name="synced_clients">Synced clients:</string>
    <string name="unsynced_clients">Unsynced clients:</string>
    <string name="validated_events">Validated events:</string>
    <string name="validated_clients">Validated clients:</string>
    <string name="task_unprocessed_events">Task unprocessed events:</string>

    <string name="refresh">Refresh</string>

    <string name="export_db_notification">Exporting Database</string>

    <string name="return_to_register">Return</string>

    <string name="sync_status_text">Sync Status</string>
    <string name="summary_forms">Other Forms</string>

    <string name="kip_id">KIP ID</string>

    <string name="opd_send_advocacy_sms">Send Advocacy SMS</string>
    <string name="opd_register_other_clients">Register Defaulter Clients</string>
    <string name="opd_register_child_under_5">Register Child Under 5</string>
    <string name="menu_opd_clients">Defaulter Clients</string>
    <string name="opd_close">OPD CLOSE</string>
    <string name="diagnose_and_treat"><![CDATA[Click to proceed]]></string>
    <string name="chv_details">CHV Details Form</string>
    <string name="abbrv_years_empty"></string>
    <string name="opd_send_sms">Send SMS Reminder</string>
    <string name="tracing_Mode">Mode of Tracing Form </string>
    <string name="missed_vaccine">Missed Vaccine Doses</string>

    <string name="record_defaulter_form">Record Defaulter Tracing Form</string>
    <string name="update_defaulter_form">Update Defaulter Tracing Form</string>

    <string name="start_tracing">START TRACING</string>
    <string name="opd_checked_in">TRACING DEFAULTER</string>
    <string name="check_in">START TRACING</string>

    <string name="antigen_administered_last_label">Last Vaccine Given:</string>
    <string name="administration_date_label">Date Last Vaccine Given:</string>
    <string name="antigen_missed_label">Missed (Vaccine) Antigen: </string>
    <string name="return_date_label">Date Client Was Expected to Return:</string>
    <string name="chv_phone_number_label">Name of CHV Assigned:</string>
    <string name="chv_name_label">Phone Number of CHV Assigned:</string>
    <string name="phone_tracing_label">Phone Tracing OutCome:</string>
    <string name="physical_tracing_label">Not Reached on Phone Going for Physical Visit:</string>

    <string name="tracing_outcome_label">Tracing Outcome:</string>
    <string name="home_administration_date_label">Home Vaccine Administration Date:</string>
    <string name="other_facility_administration_date_label">Other Facility Administration Date:</string>
    <string name="other_facility_name_label">Other Facility Name:</string>
    <string name="date_to_confirm_vaccination_label">Date To Confirm Vaccination:</string>
    <string name="mode_of_tracing_label">Mode of Tracing:</string>
    <string name="defaulter">Defaulter Tracing</string>

    <integer name="btnPlusView">1</integer>
    <integer name="btnPlusPos">2</integer>

    <string name="opd">Defaulter</string>
    <string name="opd_register_title_name">Defaulter Clients</string>

</resources>
