<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_opdFragmentProfileOverview_checkinLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_opdFragmentProfileOverview_checkedInTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/overview_sub_header_bg"
                android:gravity="left"
                android:paddingLeft="@dimen/contact_drawable_padding"
                android:paddingTop="@dimen/contact_drawable_padding"
                android:paddingBottom="@dimen/contact_drawable_padding"
                android:singleLine="true"
                android:text="@string/opd_checked_in"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/overview_font_right" />

            <Button
                android:id="@+id/btn_opdFragmentProfileOverview_diagnoseAndTreat"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/diagnose_treat_bg"
                android:text="@string/diagnose_and_treat"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/diagnose_treat_txt_color" />

            <Button
                android:id="@+id/btn_opdFragmentProfileOverview_record_defaulter_form"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/diagnose_treat_bg"
                android:text="@string/diagnose_and_treat"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/diagnose_treat_txt_color"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_opdFragmentProfileOverview_missed_vaccine"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/diagnose_treat_bg"
                android:text="@string/missed_vaccine"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/diagnose_treat_txt_color"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_opdFragmentProfileOverview_chv_details"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/diagnose_treat_bg"
                android:text="@string/chv_details"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/diagnose_treat_txt_color"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_opdFragmentProfileOverview_tracing_mode"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/diagnose_treat_bg"
                android:text="@string/tracing_Mode"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/diagnose_treat_txt_color"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_opdFragmentProfileOverview_update_defaulter_form"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/diagnose_treat_bg"
                android:text="@string/update_defaulter_form"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/diagnose_treat_txt_color"
                android:visibility="gone"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profile_overview_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:foregroundGravity="top"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@+id/patient_detail_button_footer"
            app:layout_constraintTop_toBottomOf="@id/ll_opdFragmentProfileOverview_checkinLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>